tests/invalid/invalid_enum_assign.lang
module main

typedef MyEnum enum u32 {
    one = 1,
};

func main() {
    var my_enum MyEnum = 1;
}
